# acat_object_detection

./: .gitignore  CMakeLists.txt  package.xml
src/: PoseFilter.h  PoseFilter.h~  example.cpp  service.cpp  service.cpp~
srv/: DetectObject.srv  DetectObject.srv.autosave
